@@ -1,4 +1,5 @@
 .DS_Store
 html
 pkg
+coverage
 TAGS
